[Add]レイアウト追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+    <h1>ようこそ<span>Bookers</span>へ!</h1>
+    <p>
+      <span>Bookers</span>では、さまざまな書籍に関するあなたの意見や<br/>
+       印象を共有し交換することができます。<br/>
+      <a href="/books">start</a>
+    </p>
+
     <%= yield %>
   </body>
 </html>
