--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,2 @@
-<h1>ようこそBookersへ!</h1>
-<p>Bookersでは、さまざまな書籍に関するあなたの意見や<br/>
-印象を共有し交換することができます。</p>
-
+<h1>Homes#top</h1>
+<p>Find me in app/views/homes/top.html.erb</p>
