--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,20 +13,17 @@
  *= require_tree .
  *= require_self
  */
- 
- body {
-    background-color: #fff;
-    color: #333;
-    font-family: verdana, arial, helvetica, sans-serif;
-    font-size: 13px;
-    line-height: 18px;
-    margin: 33px;
- }
+
+body {
+ font-family: verdana, arial, helvetica, sans-serif;
+ font-size: 13px;
+ line-height: 18px;
+ margin: 33px;
+}
 
 span{
   font-weight: bold;
 }
-
 
 p{
   display: block;
@@ -36,20 +33,12 @@ p{
   margin: 33px;
 }
 
-a{
-  color: #666;
-  cursor: pointer;
-  text-decoration: underline;
-}
-
-tr{
-  display: table-row;
-  vertical-align: inherit;
-  border-color: inherit;
+th{
+  padding-bottom: 5px;
 }
 
 td {
-    padding-bottom: 7px;
-    padding-left: 5px;
-    padding-right: 5px;
+   padding-bottom: 7px;
+   padding-left: 5px;
+   padding-right: 5px;
 }
