--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,81 +1,51 @@
 <h1>Books</h1>
 <table>
   <tr>
-    <th>title</th>
-    <th>body</th>
-    <th></th>
+    <th>Title</th>
+    <th>Body</th>
+    <th colspan="3"></th>
   </tr>
   <tr>
     <td>リーダブルコード</td>
     <td>より良いコードを書くためのシンプルで実践的なテクニック</td>
-    <td>
-      <a>Show</a>
-      <a>Edit</a>
-      <a>Destroy</a>
-    </td>
+    <td></td>
   </tr>
   <tr>
     <td>トラブル知らずのシステム設計</td>
     <td>システム設計の要点を図解で説明してくれます</td>
-    <td>
-      <a>Show</a>
-      <a>Edit</a>
-      <a>Destroy</a>
-    </td>
+    <td></td>
   </tr>
   <tr>
     <td>たのしいRuby</td>
     <td>Rubyの入門におすすめです</td>
-    <td>
-      <a>Show</a>
-      <a>Edit</a>
-      <a>Destroy</a>
-    </td>
+    <td> </td>
   </tr>
   <tr>
     <td>入門Git</td>
     <td>gitについての基本操作から内部構造まで解説してくれます</td>
-    <td>
-      <a>Show</a>
-      <a>Edit</a>
-      <a>Destroy</a>
-    </td>
+    <td></td>
   </tr>
   <tr>
     <td>アルゴリズム図鑑</td>
     <td>アルゴリズムについてカラーイラストでしっかり解説してくれます</td>
-    <td>
-      <a>Show</a>
-      <a>Edit</a>
-      <a>Destroy</a>
-    </td>
+    <td></td>
   </tr>
   <tr>
     <td>達人プログラマー</td>
     <td>プログラマ入門者は必読！</td>
-    <td>
-      <a>Show</a>
-      <a>Edit</a>
-      <a>Destroy</a>
-    </td>
+    <td></td>
   </tr>
   <tr>
     <td>データベース実践入門</td>
     <td>効率的なSQL文を教えてくれます</td>
-    <td>
-      <a>Show</a>
-      <a>Edit</a>
-      <a>Destroy</a>
-    </td>
+    <td> </td>
   </tr>
   <tr>
     <td>月姫</td>
     <td>a peace of glass moon</td>
-    <td>
-      <a>Show</a>
-      <a>Edit</a>
-      <a>Destroy</a>
-    </td>
-  </tr>
+    <td></td>
+   </tr>
 </table>
 <h2>New books</h2>
+
+
