[Add]books_controller.rbにindexを定義

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -47,6 +47,12 @@
    </tr>
 </table>
 
-
+<% @books.each do |book| %>
+  <p>Title</p>
+  <span><%= book.title %></span>
+  
+  <p>Body</p>
+  <span><%= book.body %></span>
+<% end %>
 
 
