--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,10 +4,12 @@
     <th>Title</th>
     <th>Body</th>
     <th colspan="3"></th>
-  </tr>
   <% @books.each do |book| %>
-
+    <span>
+    <%= link_to "Show", "/books/#{book.id}" %>
+    </span>
   <% end %>
+  </tr>
   <tr>
     <td>リーダブルコード</td>
     <td>より良いコードを書くためのシンプルで実践的なテクニック</td>
