--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<body>
+  <h4>Title:</h4>
+  <p><%= @book.title %></p>
+
+  <h4>Body:</h4>
+  <p><%= @book.body %></p>
+</body>
