--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,11 +1,12 @@
 <h1>Editing Book</h1>
-<%= form_with model:@book do |f| %>
-  <h4>Title</h4>
-  <%=f.text_field:title %>
-  
-  <h4>Body</h4>
-  <%=f.text_area:body %>
-  
-  <p><%=f.submit 'Update Book'</p>
-  
+<%= form_with model: @book, url: ook_path(@book), method: :patch do |f| %>
+	<h4>Title</h4>
+	<%= f.text_field :title %>
+	<h4>Body</h4>
+	<%= f.text_area :body %>
+   <div><%= f.submit 'Update Book' %></div>
 <% end %>
+
+<%=link_to "Show",book_path(@book.id) %>
+   |
+<%= link_to "Back", '/books' %>
