--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,17 +7,17 @@
 
   <% @books.each do |book| %>
   <tr>
-     <td><%=link_to book.title book_path %></td>
-     <td><%=link_to book.body book_path %></td>
-     <td><%= link_to "Show", "/books/#{book.id}" %></td>
-     <td><%= link_to "Edit", "/books/#{book.id}" %></td>
-     <td> <%=link_to "Destroy", "/books/#{book.id}" %></td>
+     <td><%=book.title %></td>
+     <td><%=book.body %></td>
+     <td><%= link_to "Show", book_path(book.id) %></td>
+     <td><%= link_to "Edit",  edit_book_path(book.id) %></td>
+     <td> <%=link_to "Destroy", book_path(book.id) , method: :delete, "data-confirm" => "Are you sure?" %></td>
   </tr>
   <% end %>
 </table>
 
 <h2>New books</h2>
-<%=form_with model: @book do |f| %>
+<%=form_with model: @book, url:'/books', method: :post do |f| %>
 
   <h4>Title</h4>
   <%=f.text_field:title %>
