--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,9 +1,14 @@
 <body>
-  <h4>Title:</h4>
-  <p><%= @book.title %></p>
-
-  <h4>Body:</h4>
-  <p><%= @book.body %></p>
+  <p>
+   <span>Title:</span>
+   <%= @book.title %>
+  </p>
+  <p>
+   <span>Body:</span>
+   <%= @book.body %>
+  </p>
 </body>
 
-<td><%= link_to "Edit", "/books/#{book.id}" %></td>
+<%= link_to "Edit", edit_book_path(@book.id) %>
+  |
+<%= link_to "Back", '/books' %>
