--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -25,7 +25,7 @@
   <h4>Body</h4>
   <%=f.text_area:body %>
 
-  <br><%=f.submit 'Create Book' %></br>
+  <div><%=f.submit 'Create Book' %></div>
 <% end %>
 
 
