--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,7 @@
+<div>
+  <%= flash[:notice] %>
+</div>
+
 <h1>Books</h1>
 <table>
   <tr>
@@ -18,9 +22,13 @@
 
 <h2>New books</h2>
 <% if @book.errors.any? %>
-
+  <%=@book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+   <% @book.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+   <% end %>
+  </ul>
 <% end %>
-
 
 <%=form_with model: @book, url:'/books', method: :post do |f| %>
 
